fix critical sonar code